# gildlab.cli

./: .gitignore  Cargo.toml  README.md  default.nix  devenv.nix  flake.nix
.github/workflows/: static.yml  test.yml
src/: main.rs  pins.rs
src/author/: authors.rs  mod.rs
src/cli/: mod.rs  pins.rs
src/evm/: network.rs
src/graphql/: pins.graphql
src/ipfs/: mod.rs
src/subgraph/: mod.rs
src/subgraph/pin/: mod.rs  pin.schema.json
