[package]
name = "gildlab-cli"
license = "CAL-1.0"
description = "CLI tools for gildlab nodes."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bs58 = "0.4.0"
clap = { version = "4.2.3", features = ["derive", "cargo"] }
futures = "0.3.28"
graphql_client = "0.12.0"
multihash = "0.18.1"
once_cell = "1.17.1"
reqwest = { version = "0.11.16", features = ["json"] }
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
rain-metadata = "0.0.2-alpha.6"